# AegisForge

./: .dockerignore  .env.example  .gitignore  .sqlx  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DISCOVERY_SETUP.md  Dockerfile  ECONOMY_GUIDE.md  LICENSE  README.md  SECURITY.md  context.md  fly.toml  replace_logos.py  server.md  vercel.json
.claude/: settings.local.json
.sqlx/: query-061d50fdd532f8b6bc5238e36ab9149412b5723ec68ee87b5920ac75187f1fe1.json  query-194b87b95a51638563dd063120564dd5fc926b277a380979296a7b0f98de7385.json  query-1b6fe2da68d9f9ab59a9e47dd09a752de3ba28911c223cd94f6b749d991d7ad2.json  query-1e5d393687ff37e35ffeab14bcef49194a4a02146ea812e258eacdbf94fd76b4.json  query-27776188d8c8d27747f260b8d62b51b1efa6f984de726482dd7b5b37cebcd048.json  query-2fa160b4423b3035e0508bbd7bccf41dae4a7a50d9cc58e9228db0e8bdd44365.json  query-3016e07caf39b005946fede0b0a216ca3953b896448d083db4e9569d5994a5b1.json  query-30a29aee614ab606c4929903705caea5cbb4d6a0e65bddddc43a7686f49a325b.json  query-3952ab7e368c78d41f0ba572749bd87475137560cbcbadad82aa075e4b0ed824.json  query-3998d0e92aad48abdeb0530f1ab7b7ce3644d44a9e2fa56eaf946773ef6e03b3.json  query-3ae39a4c9a1d26a9a0977abff3aa481bdc95e88afccce2ad2afeb23bac9753ed.json  query-3c4f0a3a1523a8c27ac69a57b611c806a6bdef2f8d3ac512a53fe1036d3c87ac.json  query-439f20c86a6f74c0122c053963c19094b23d99a4b4fc1f0957e910a6a1a696ae.json  query-4a817d7830bd3f84cbf4b79e5fa377f74033158afa3497f10720daf87dbb994e.json  query-4c9c8c3c8509976c8c01bb4904bc1d3de80ca0b77fb58f8d705d954d8d252f9e.json  query-4d49fd1698c35cee5362ce7b3bf00527d516fcffa5ff1e9141bb0bdcb76ca215.json  query-4d8cc19cd211a428fe108017d7d29b5fa1d1b5f6aff4177088c628b8d1b63be8.json  query-4f4dba9c1c7b19595cb4b38505cea41a191a998c831db965765ee9947eccdd6a.json  query-5025dd91fc707f1787d67e9b76c43cbebf0684bf4e41e75c9aab7d4b060aaa92.json  query-524b10856860b2cc5a9a8cb283b95f41404b225d9168ea68f0ed9608bb757490.json  query-5327d0f560fbe442254206ae743d9a94c2bd5beeee1a22ce867cad1666a1950d.json  query-54dc2f7d6637a00bce79fc57ab20f8d637a2074ba6254f0081a45c7cfd486966.json  query-57ab63a36a955d0d9234aae428b01e082b6900bbe8d17c0f5636443d2a96aa06.json  query-57dfaf91bc11e8f670f78562f56ace90446e370808d4769a7d4cd48ff41a5ecf.json  query-5a36bc508ec1075ac2dcba440944ecedc7f5b7c31763c661534536a807bd9409.json  query-5b1734db011277ebf442d5a702530b6a96e3c84155efe135a947807ecdd8cf36.json  query-5b37ba753c4835acaa6b6823838a131bf177e9370ec8a73bdabc3784f88b1596.json  query-5e11f8c091d5bbd2f16186fbaa35fad70e775a9b2e069973c6feb886d6fbc622.json  query-5f2fdd009c927691633c51f0a4652142efdb432355da182d7a617c22d639b2d6.json  query-629e7d1282fa9c9f5e53b05e90ac0f4465235632d825333f7afef41c6a0543e2.json  query-64727664e3d5fdbbd33be1e0882e529b6fc7ee5412eb38891e528d7c26b0994a.json  query-65d333cc44e5482adca190aabdf62ee0284f597982cc11dd25cae2068879b537.json  query-692dd6ba93460d18c7b1ed30261318c019728e1b715844b321687e51a1e2a0ca.json  query-6ab686880a0e9e4f9554c211c6677014e545d62c867eca44a15385e946a0456a.json  query-6b27b63a55b97673cd917fabbc280477384efa5e6ac45fd5e8efbe2be330fad1.json  query-6efb80e60b2df22c937886f37a1a21c85f01781320808b6b5dab406fe8229988.json  query-72a8e21e59d0f2e7224c5b2a5026e518c295d682eb0f6abf7e47a237938aa676.json  query-7f75e49b18bb18a650b7a06770f2dfa5d0b97d9b0a863f4319f502b2d4e0c52b.json  query-836b43786ed8ab119a358e1a7e9f1894388e54f3a202fe110505bcfe0aa20cdb.json  query-8b8799e98428e536fbfb567cc227db66c4e0e3668bce762724cea7c491b5d30c.json  (+21 more)
migrations/: 0001_initial.sql  0002_v3_update.sql  0003_tickets_giveaways.sql  0004_v4_updates.sql  0005_v4_1_shop_inventory.sql  0006_shadow_bans.sql  (+2 more)
(+51 files in other folders)
