[package]
name = "aegisforge"
version = "0.1.0"
edition = "2021"
authors = ["Antigravity"]
description = "A premium, high-performance Discord bot written in Rust."

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
poise = "0.6"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
