[package]
name = "aegisforge"
version = "0.1.0"
edition = "2021"
authors = ["watispro1"]
description = "A premium, high-performance Discord bot written in Rust."

[dependencies]
# Discord
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
poise = "0.6"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Randomization
rand = "0.8"

# Database — PostgreSQL with compile-time query verification
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }

# In-memory caching for hot guild configs (lock-free concurrent hashmap)
dashmap = "5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUIDs
uuid = { version = "1", features = ["v4", "serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Config / error handling
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"

# Web server for stats API
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }


[dev-dependencies]
tokio-test = "0.4"
