[package]
name = "aegisforge"
version = "4.0.0"
edition = "2021"
authors = ["Watispro"]
description = "AegisForge v4 Hyperforge - High-performance Discord automation."

[dependencies]
# Discord
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "native_tls_backend", "model", "cache", "utils", "collector", "framework"] }
poise = { version = "0.6", default-features = false, features = ["cache", "chrono", "handle_panics"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Randomization
rand = "0.8"

# Database — PostgreSQL with compile-time query verification
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono", "uuid"] }

# In-memory caching for hot guild configs (lock-free concurrent hashmap)
dashmap = "5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUIDs
uuid = { version = "1", features = ["v4", "serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Config / error handling
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"

# Web server for stats API
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
urlencoding = "2"
evalexpr = "8.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }


[dev-dependencies]
tokio-test = "0.4"
